Creating new base layout, fixing spacing

--- a/css/grid.css
+++ b/css/grid.css
@@ -23,6 +23,10 @@ $pad: 20px;
     padding-right: 0;
   }
 }
+
+.col-1-1 {
+  width: 100%;
+}
 .col-2-3 {
   width: 66.66%;
 }
