--- a/css/uncharted.css
+++ b/css/uncharted.css
@@ -36,7 +36,7 @@ a {
 
 .section-header {
   font-family: 'Amatic SC', cursive;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   font-size: 30pt;
 }
 
@@ -44,11 +44,26 @@ a {
   display: none;
 }
 
+.centered {
+  margin-right: 25%;
+  margin-left: 25%;
+}
+
 .assignment {
-  padding: 10px;
   height: 100px;
   position: relative;
+  box-sizing: border-box;
 } 
+
+.assignment-first {
+  margin-right: 10px;
+  margin-bottom: 20px;
+}
+
+.assignment-second {
+  margin-left: 10px;
+  margin-bottom: 20px;
+}
 
 .assignment-text {
   font-family: 'Amatic SC', cursive;
@@ -64,24 +79,18 @@ a {
 }
 
 .assignment::after {
-  background-size: 100%;
+  background-size: 100% 100%;
   content: "";
-  filter: blur(3px);
-  -webkit-filter: blur(3px);
-  -moz-filter: blur(3px);
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   position: absolute;
   z-index: -1;   
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
-.assignment-hover::after {
-  filter: blur(0px);
-  -webkit-filter: blur(0px);
-  -moz-filter: blur(0px);  
+.assignment-hover::after { 
   opacity: 1.0; 
 }
 
